fix(extension): change color of scrollbar corner

--- a/apps/browser-extension-wallet/src/views/browser-view/components/Layout/SectionLayout.modules.scss
+++ b/apps/browser-extension-wallet/src/views/browser-view/components/Layout/SectionLayout.modules.scss
@@ -24,7 +24,7 @@ $aside-width-large: 420px;
   padding-left: size_unit(2);
 
   @media (max-width: $breakpoint-minimum) {
-    min-width: 560px;
+    min-width: 567px;
     padding-right: 24px;
   }
 
