--- a/packages/common/src/ui/styles/abstracts/_mixins.scss
+++ b/packages/common/src/ui/styles/abstracts/_mixins.scss
@@ -45,6 +45,9 @@
     border-radius: $thum-raidus;
     height: $thumb-height;
   }
+  &::-webkit-scrollbar-corner {
+    background: $track-color;
+  }
 }
 
 // Loader icon spin animation
